--- a/neutrinos.tex
+++ b/neutrinos.tex
@@ -15,8 +15,8 @@ Neutrino oscillation was first predicted by Bruno Pontecorvo. It describes the p
 
 \section{Solar Oscillations and the Solar Neutrino Problem}
 
-The solar neutrino flux derived from Bahcall's Standard Solar Model is shown in figure \ref{fig:solarmodel}. As previously stated, nuclear fusion and decay processes, produce an abundant amount of neutrinos. The standard solar model predicts that these reactions produce several groups of neutrinos, with differing fluxes and energy spectra. The figure also shows the ranges of detection of existing solar neutrino experiments in different shades of blue, to illustrate that they sample different portions of the solar neutrino energy spectrum. Three of these experiments, plus a new one, are discussed below.
-Since neutrinos rarely interact with matter, they pass through the sun and the earth undetected. About 65-billion neutrinos from the sun stream through every square centimeter on the Earth every second, yet we are oblivious to their passage in our every-day lives. \cite{bnl}
+The solar neutrino flux derived from Bahcall's Standard Solar Model is shown in figure \ref{fig:solarmodel}. Nuclear fusion and decay processes produce an abundant amount of neutrinos. The standard solar model predicts that these reactions produce several groups of neutrinos, each with differing fluxes and energy spectra. The figure also shows the ranges of detection of existing solar neutrino experiments in different shades of blue to illustrate that they sample different portions of the solar neutrino energy spectrum. Three of these experiments, plus a new one, are discussed below.
+
 \begin{figure}[htp]
 \centering
 \includegraphics[scale=.55]{figs/solarmodel.jpg}
@@ -24,10 +24,18 @@ Since neutrinos rarely interact with matter, they pass through the sun and the e
 \label{fig:solarmodel}
 \end{figure}
 
-The first experiment to detect the effects of neutrino oscillation was the Ray Davis's Homestake Experiment. He observed a deficit of about $1/3$ the flux of solar neutrinos that was predicted by Bahcall's Standard Solar Model. The unexplained difference between the measured solar neutrino flux and model predictions lead to the 'Solar Neutrino Problem': the case of missing neutrinos from the Sun. \cite{fnal}
+Since neutrinos rarely interact with matter, they pass through the sun and the earth undetected. About 65-billion neutrinos from the sun stream through every square centimeter on the Earth every second, yet we are oblivious to their passage in our every-day lives. \cite{bnl}
 
-While it is now known that the Homestake Experiment detected neutrinos, some physicist were weary of the results. Conclusive evidence of the Solar Neutrino Problem was provided by the Kamiokande-II experiment, a water Cerenkov detector with a low enough energy threshold to detect neutrinos through neutrino-electron elastic scattering. In the elastic scattering interaction the electrons coming out of the point of reaction strongly point in the direction that the neutrino was traveling, away from the sun. While the neutrinos observed in Kamiokande-II were clearly from the sun, the experiment measured about 1/2 the predicted flux, rather than the chlorine experiment's 1/3.
-The solution to the solar neutrino problem was finally experimentally determined by the Sudbury Neutrino Observatory(SNO). The Ray Davis's Homestake Experiment was only sensitive to electron neutrinos, and the Kamiokande-II Experiment was dominated by the electron neutrino signal. The SNO experiment had the capability to see all three neutrino flavours. Because of this, it was possible to measure the electron neutrinos and total neutrino flux. The experiment demonstrated that the deficit was due to the MSW effect,  the conversion of electron neutrinos from their pure flavour state into the second neutrino mass eigenstate as they passed through a resonance due to the changing density of the sun. The resonance is energy dependent, and "turns on" near 2MeV. The water Cerenkov detectors only detect neutrinos above about 5MeV, while the radiochemical experiments were sensitive to lower energy (0.8MeV for chlorine, 0.2MeV for gallium), and this turned out to be the source of the difference in the observed neutrino rates at the two types of experiments. Figure \ref{fig:solarexperiments} shows Homestake, Kamiokande-II and SNO experiments. 
+The first experiment to detect the effects of neutrino oscillation was the Ray Davis's Homestake Experiment. The detector was stationed in the Homestake Gold Mine in Lead, South Dakota. It was 1,478 meters underground and was 380 $m^{3}$. The detector was filled with perchloroethylene. Perchloroethylene was chosen because of it's high concentrations of chlorine. When an $\nu_{e}$ interaced with chlorine-37 atom, the atom would transform to argon-37 which was then extracted and counted. The neutrino capture reaction is shown in equation \ref{eq:capture}. Davis observed a deficit of about $1/3$ the flux of solar neutrinos that was predicted by Bahcall's Standard Solar Model. The unexplained difference between the measured solar neutrino flux and model predictions lead to the Solar Neutrino Problem.\cite{fnal}
+
+\begin{equation}
+\label{eq:capture}
+\nu_{e} +{}^{37}Cl \rightarrow {}^{37}Ar + e^{-}
+\end{equation}
+
+While it is now known that the Homestake Experiment detected neutrinos, some physicist were weary of the results. Conclusive evidence of the Solar Neutrino Problem was provided by the Kamiokande-II experiment, a water Cherenkov detector with a low enough energy threshold to detect neutrinos through neutrino-electron elastic scattering. In the elastic scattering interaction the electrons coming out of the point of reaction strongly point in the direction that the neutrino was traveling, away from the sun. While the neutrinos observed in Kamiokande-II were clearly from the sun, there was still a discrepancy between Kamiokande-II and Homestake; The Kamiokande-II experiment measured about 1/2 the predicted flux, rather than the 1/3 that the Homestake Experiment saw.
+
+The solution to the solar neutrino problem was finally experimentally determined by the Sudbury Neutrino Observatory(SNO). The Ray Davis's Homestake Experiment was only sensitive to electron neutrinos, and the Kamiokande-II Experiment was dominated by the electron neutrino signal. The SNO experiment had the capability to see all three neutrino flavours. Because of this, it was possible to measure the electron neutrinos and total neutrino flux. The experiment demonstrated that the deficit was due to the MSW effect,  the conversion of electron neutrinos from their pure flavour state into the second neutrino mass eigenstate as they passed through a resonance due to the changing density of the sun. The resonance is energy dependent, and is visible near 2MeV. The water cherenkov detectors only detect neutrinos above about 5MeV, while the radiochemical experiments were sensitive to lower energy (0.8MeV for chlorine, 0.2MeV for gallium), and this turned out to be the source of the difference in the observed neutrino rates at the two types of experiments. Figure \ref{fig:solarexperiments} shows Homestake, Kamiokande-II and SNO experiments. 
 \begin{figure}[htp]
 \centering
 	\begin{subfigure}[b]{.3\textwidth}
@@ -51,7 +59,7 @@ The solution to the solar neutrino problem was finally experimentally determined
 \label{fig:solarexperiments}
 \end{figure}
 \subsection{MSW Effect}
-The Mikheyev-Smirnov-WOlfenshein effect is a process which acts to modify neutrino oscillations in matter. The presence of electrons in matter changes the energy levels of the mass eigenstates of neutrinos due to charged current coherent forward scattering of the electron neutrinos. This coherent forward scattering is similar to the electromagnetic process with respect to the refractive index of light in a medium. Because of this MSW Effect, neutrinos in vacuum have a different effective mass than neutrinos in matter and because neutrino oscillations depend on the squared mass difference of the neutrinos, the neutrino oscillations are different in matter than in vacuum. This effect is important at the sun where electron neutrinos are produced. The neutrinos of high energy leaving the sun are in a vacuum propagation eigenstate $\nu_{2}$ that has a very small overlap with the electron neutrino $\nu_{e}=\nu_{1}cos(\theta)+\nu_{2}sin(\theta)$ seen by the charged current reactions in Kamiokande-II and SNO. The discrepancy of the deficit between SNO, Kamiokande-II and Homestake is due to the energy of the solar neutrinos. As previously stated, the MSW effect "turns on" at about 2MeV. At lower energy, this MSW effect is negligible. \cite{Smirnov:2003da}
+The Mikheyev-Smirnov-WOlfenshein effect is a process which acts to modify neutrino oscillations in matter. The presence of electrons in matter changes the energy levels of the mass eigenstates of neutrinos due to charged current coherent forward scattering of the electron neutrinos. This coherent forward scattering is similar to the electromagnetic process with respect to the refractive index of light in a medium. Because of this MSW Effect, neutrinos in vacuum have a different effective mass than neutrinos in matter and because neutrino oscillations depend on the squared mass difference of the neutrinos, the neutrino oscillations are different in matter than in vacuum. This effect is important at the sun where electron neutrinos are produced. The neutrinos of high energy leaving the sun are in a vacuum propagation eigenstate $\nu_{2}$ that has a very small overlap with the electron neutrino $\nu_{e}=\nu_{1}cos(\theta)+\nu_{2}sin(\theta)$ seen by the charged current reactions in Kamiokande-II and SNO. The discrepancy of the deficit between SNO, Kamiokande-II and Homestake is due to the energy of the solar neutrinos. The MSW effect "turns on" at about 2MeV and at lower energies, this MSW effect is negligible. \cite{Smirnov:2003da}
 
 
 
@@ -82,7 +90,7 @@ R = \frac{(\nu_{\mu} + \overline{\nu_{\mu}})}{(\nu_{e} + \overline{\nu_{e}})}
 
 
 
-There have been two types of detectors used to study atmospheric neutrinos: Water Cherenkov detectors and tracking calorimeters. Super-Kamiokande is the detector we will focus on. These atmospheric detector experiments measure the ratio of $\nu_{\mu}$ to $\nu_{e}$. They also measure the zenith angle distribution of the neutrinos. These experiments report a double ratio (shown in equation \ref{eq:doubleratio}). This double ratio is the ratio we measure in the detector to the ratio that we expect which is 2. If the double ratio equals to 1, the data agrees with the prediction. Various measurements from multiple experiments are shown in figure \ref{fig:ratiotable}. Except for Frejus, all R measurements are less than 1. This discrepancy between the predicted R and the measured R became known as the Atmospheric Neutrino Anomaly.
+There have been two types of detectors used to study atmospheric neutrinos: Water Cherenkov detectors and tracking calorimeters. Super-Kamiokande is the detector we will focus on. These atmospheric detector experiments measure the ratio of $\nu_{\mu}$ to $\nu_{e}$. They also measure the zenith angle distribution of the neutrinos. These experiments report a double ratio (shown in equation \ref{eq:doubleratio}). This double ratio is the ratio measured in the detector to the ratio thats expected which is 2. If the double ratio equals to 1, the data agrees with the prediction. Various measurements from multiple experiments are shown in figure \ref{fig:ratiotable}. Except for Frejus, all R measurements are less than 1. This discrepancy between the predicted R and the measured R became known as the Atmospheric Neutrino Anomaly.
 \begin{equation}
 \label{eq:doubleratio}
 R = \frac{(N_{\mu}/N_{e})_{DATA}}{(N_{\mu}/N_{e})_{SIM}}
@@ -95,7 +103,7 @@ R = \frac{(N_{\mu}/N_{e})_{DATA}}{(N_{\mu}/N_{e})_{SIM}}
 \label{fig:ratiotable}
 \end{figure}
 
-As previously stated, Kamiokande-II has the the capability of measuring the direction of the incoming neutrinoos. The expectation of atmospheric neutrino detection is that the flux be isotropic due to the fact that atmospheric neutrinos can reach the detector from all directions. Kamiokande-II noticed muon-like data did not agree well with this expectation. At low energies approximately half of the $\nu_{\mu}$ are missing over the full range of zenith angles. At high energies the number of $\nu_{\mu}$ coming down from above the detector seems to agree with expectation, but half of the same $\nu_{\mu}$ coming up from below the detector are missing. This anomaly can be easily explained by neutrino flavour oscillations. Due to the fact that the neutrino travels less distance coming straight down into the detector (about 15km) than coming up from the bottom of the detector(13000km) changes the probability of oscillation. The probability of oscillation for the muon neutrinos coming down into the detector is roughly zero, whereas for neutrinos coming up, the oscillation probability is $sin^2(2\theta)$. Also, that fact that the electron-like events are not reduced but the muon-like events are suggests that the oscillation mode for atmospheric neutrinos is $\nu_{\mu} \rightarrow \nu_{\tau}$. 
+Kamiokande-II has the the capability of measuring the direction of the incoming neutrinos. The expectation of atmospheric neutrino detection is that the flux be isotropic due to the fact that atmospheric neutrinos can reach the detector from all directions. Kamiokande-II noticed that muon-like data did not agree well with this expectation. At low energies approximately half of the $\nu_{\mu}$ are missing over the full range of zenith angles. At high energies the number of $\nu_{\mu}$ coming down from above the detector seems to agree with expectation, but half of the same $\nu_{\mu}$ coming up from below the detector are missing. This anomaly can be easily explained by neutrino flavour oscillations. Due to the fact that the neutrino travels less distance coming straight down into the detector (about 15km) than coming up from the bottom of the detector(13000km) changes the probability of oscillation. The probability of oscillation for the muon neutrinos coming down into the detector is roughly zero, whereas for neutrinos coming up, the oscillation probability is $sin^2(2\theta)$. Also, that fact that the electron-like events are not reduced, but the muon-like events are, suggests that the oscillation mode for atmospheric neutrinos is $\nu_{\mu} \rightarrow \nu_{\tau}$. 
 Both the solar and atmospheric neutrino problems can be explained by neutrino oscillation so its fitting to derive this phenomenon mathematically. In the next two sections, two flavour and three flavour neutrino oscillation derivations will be explained. 
 
 
