--- a/MicroBooNE.tex
+++ b/MicroBooNE.tex
@@ -6,7 +6,7 @@ The experimental study of neutrinos is central to FermiLab's scientific program 
 
 MicroBooNE (Micro Booster Neutrino Experiment) is a ~89 T active volume (180 T total mass) LArTPC which is then inserted into a cylindrical crysotat on axis of the Booster Neutrino Beam (BNB) stationed at Fermilab in Batavia, Illinois. The main components of MicroBooNE will be detailed in the upcoming sections. MicroBooNE is also an R\&D detector that can be scaled up to a significanlty larger size, such as Deep Underground Neutrino Experiment (DUNE) which is roughly 40 kT compared to MicroBooNE at 180T \cite{dune}. Understanding LArTPC technology and detector physics is necessary to build a LArTPC the size of DUNE, and MicroBooNE has made many advances in developing this technology\cite{noisechar} \cite{michel}. 
 \section{Time Projection Chamber}
-MicroBooNE's Time Projection Chamber (TPC) is 10.3 m long (beamline direction), 2.3 m high and 2.5 m wide (which corresponds to the drift distance). The TPC is shown in figure \ref{fig:tpc}. MicroBooNE is the largest LArTPC currently running in the world\cite{microboone}. This LArTPC has 3 wire planes: 1 plane that collects the ionization in the wires and is $0^{\circ}$ to the virtical with 3456 wires spaced 3 mm apart, and 2 planes where the ionization drifts passed and induces a signal at $+/- 60^{\}circ}$ to the vertical each with 2400 wires also spaced 3 mm apart. Each plane has a spacing also of 3 mm from eachother. The wires are then connected to detector specific circuit boards (ASICS) that are submered and operate inside liquid argon. The first two planes are the induction planes and the last is the collection. The electric field of the TPC is created using 64 stainless steel tubes shaped into rectangules around the TPC and held in place by G10 to form a field cage. The cathode is charged at a high voltage of -70 kV and this voltage is stepped down across the field cage tubes using a voltage divider chain with an equivalent resitance of 240 M\ohm between the tubes. The field cage tubes are separated by 4 cm from center to center. 
+MicroBooNE's Time Projection Chamber (TPC) is 10.3 m long (beamline direction), 2.3 m high and 2.5 m wide (which corresponds to the drift distance). The TPC is shown in figure \ref{fig:tpc}. MicroBooNE is the largest LArTPC currently running in the world\cite{microboone}. This LArTPC has 3 wire planes: 1 plane that collects the ionization in the wires and is $0^{\circ}$ to the virtical with 3456 wires spaced 3 mm apart, and 2 planes where the ionization drifts passed and induces a signal at $\pm 60^{\circ}$ to the vertical each with 2400 wires also spaced 3 mm apart. Each plane has a spacing also of 3 mm from eachother. The wires are then connected to detector specific circuit boards (ASICS) that are submered and operate inside liquid argon. The first two planes are the induction planes and the last is the collection. The electric field of the TPC is created using 64 stainless steel tubes shaped into rectangules around the TPC and held in place by G10 to form a field cage. The cathode is charged at a high voltage of -70 kV and this voltage is stepped down across the field cage tubes using a voltage divider chain with an equivalent resitance of 240 $M\ohm$ between the tubes. The field cage tubes are separated by 4 cm from center to center. 
 \section{Light Collection System}
 The light collection system is a crucial part for 3D reconstruction of particle interactions in the LArTPC. It is possible to reconstruct interactions using just the wire signals, but without the initial timing (t0) of an event, it is impossible to position the event along the drift direction. When a particle interaction occurs, the scintillation light created propogates within nanoseconds to the light collection system compared to the milliseconds it takes the ionized electrons from the interaction to reach the anode wire planes. Therefore we can precisely know where along the drift direction the particle interaction first took place. The scintillation light is also localized, so combining the PMT information with the wire plane information allows for cosmic background rejection happening outside the beam timing window.  
 
