--- a/beam.tex
+++ b/beam.tex
@@ -6,18 +6,16 @@ The MicroBooNE detector is stationed at FNAL where it receives neutrinos from bo
 \centering
 	\begin{subfigure}[b]{.4\textwidth}
 	\includegraphics[width=\textwidth]{figs/lee.png}
+	\caption{Low Energy excess seen in MiniBooNE}
 	\label{fig:lee}
-	\caption{Energy spectrum of the Booster Neutrino Beam at Fermi National Laboratories}
 	\end{subfigure}
 	\quad
 	\begin{subfigure}[b]{.4\textwidth}
 	\includegraphics[width=\textwidth]{figs/bnbflux.png}
-	\label{fig:bnbflux}
 	\caption{Energy spectrum of the Booster Neutrino Beam at Fermi National Laboratories}
+	\label{fig:bnbflux}
 	\end{subfigure}
 	\quad
 \label{fig:figures}
 \caption{\ref{fig:bnbflux} Flux of BNB at FNAL.}
 \end{figure}
-\clearpage
-\dots
