--- a/intro.tex
+++ b/intro.tex
@@ -5,7 +5,4 @@
 % decide later, do the writing first
 \chapter{Introduction}
 %\addcontentsline{toc}{chapter}{Introduction}
-This thesis will be a description of work done to further increase effiiciency and purity of the charged current inclusive cross section measurement using the MicroBooNE detector. It will also describe the MicroBooNE detector, what neutrinos are, the low energy excess and how MicroBooNE will contribute to this measurement, the charged current inclusive cross section measuremnt and it's importance as well as convolutional neural networks and how they can be used in $\mu/\pi$ separation. 
-\clearpage
-
-More introduction
+This thesis will be a description of work done to further increase effiiciency and purity of the charged current inclusive cross section measurement using the MicroBooNE detector. It will also describe the MicroBooNE detector, what neutrinos are, the low energy excess and how MicroBooNE will contribute to this measurement, the charged current inclusive cross section measuremnt and it's importance as well as convolutional neural networks and how they can be used in $\mu/\pi$ separation. Chapters \dots will talk about \dots
