--- a/example.bib
+++ b/example.bib
@@ -45,22 +45,117 @@
      note     = "CERN-LHCC-98-4"
 }
 
-@Misc{hepthesis,
-     author = "Buckley, Andy",
-     title  = "The hepthesis {\LaTeX} class"
-}
 @Article{dune,
      author    = "Acciari, R. et al.",
- collaboration = "MicroBooNE",
+ collaboration = "The MicroBooNE Collaboration",
      title     = "Long-Baseline Neutrino Facility (LBNF) and Deep Underground Neutrino Experiment (DUNE)",
      note      = "arXiv:1512.06148",
      year      = "2015",
 }
 
-\bibitem{dune}R.Acciari et al., "Long-Baseline Neutrino Facility (LBNF) and Deep Underground Neutrino Experiment (DUNE)", arXiv:1512.06148, (2015).
-\bibitem{noisechar} The MicroBooNE Collaboration, "Noise Characterization and Filtering in the MicroBooNE Liquid Argon TPC", arXiv:1705.07341,(2016).
-\bibitem{michel} The MicroBooNE Collaboration, "Michel Electron Reconstruction Using Cosmic Ray Data from the MicroBooNE LArTPC", arXiv:1704.02927 (2017).
-\bibitem{microboone}The MicroBooNE Collaboration, "Design and Construction of the MicroBooNE Detector", JINST 12, P02017 (2017) 
+@Article{noisechar,
+     author    = "Acciari, R. et al.",
+ collaboration = "The MicroBooNE Collaboration",
+     title     = "Noise Characterization and Filtering in the MicroBooNE Liquid Argon TPC",
+     note      = "arXiv:1705.07341",
+     year      = "2016",
+}
+@Article{michel,
+     author    = "Acciari, R. et al.",
+ collaboration = "The MicroBooNE Collaboration",
+     title     = "Michel Electron Reconstruction Using Cosmic Ray Data from the MicroBooNE LArTPC",
+     note      = "arXiv:1704.02927",
+     year      = "2017",
+}
+@Article{microboone,
+     author    = "Acciari, R. et al.",
+ collaboration = "The MicroBooNE Collaboration",
+     title     = "Design and Construction of the MicroBooNE Detector",
+     journal   = "JINST",
+     volume    = "12",
+     year      = "2017",
+}
+@Article{miniboone,
+     author    = "Acciari, R. et al.",
+ collaboration = "The MicroBooNE Collaboration",
+     title     = "Unexplained Excess of Electronlike Events from a 1-GeV Neutrino Beam",
+     journal   = "Phys. Rev.",
+     volume    = "102",
+     year      = "2009",
+     pages     = "101802",
+}
+@Misc{neutrino,
+author = {Wikipedia},
+title = {Neutrino},
+howpublished = {\url{http://wikipedia.org/wiki/Neutrino}},
+year = {2013},
+}
+
+@Misc{historyneutrino,
+author = {Dave Casper},
+title = {What's a Neutrino},
+howpublished = {\url{http://www.ps.uci.edu/~superk/neutrino.html}},
+year = {2013},
+}
+
+@ARTICLE{2008PhR...460....1G,
+   author = {{Gonzalez-Garcia}, M.~C. and {Maltoni}, M.},
+    title = "{Phenomenology with massive neutrinos}",
+  journal = {\physrep},
+archivePrefix = "arXiv",
+   eprint = {0704.1800},
+ primaryClass = "hep-ph",
+     year = 2008,
+    month = apr,
+   volume = 460,
+    pages = {1-129},
+      doi = {10.1016/j.physrep.2007.12.004},
+   adsurl = {http://adsabs.harvard.edu/abs/2008PhR...460....1G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@Misc{neutrinooscillation,
+author = {Wikipedia},
+title = {Neutrino Oscillation},
+howpublished = {\url{http://en.wikipedia.org/wiki/Neutrino_oscillation}},
+year = {2013},
+}
+
+@Misc{fnal,
+author = {Karsten Heeger},
+title = {Big World of Small Neutrinos},
+howpublished = {\url{http://conferences.fnal.gov/lp2003/forthepublic/neutrinos/}},
+}
+
+@Misc{bnl,
+author = {Brooknaven National Laboratory},
+title = {Neutrinos and Nuclear Chemistry},
+howpublished = {\url{http://www.chemistry.bnl.gov/sciandtech/sn/default.htm}},
+year = {2010},
+}
+  
+@article{Smirnov:2003da,
+      author         = "Smirnov, A. Yu.",
+      title          = "{The MSW effect and solar neutrinos}",
+      pages          = "23-43",
+      year           = "2003",
+      eprint         = "hep-ph/0305106",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = HEP-PH/0305106;%%",
+}
+ 
+@Misc{atmos,
+title = {Neutrino Oscillations},
+howpublished = {\url{http://www2.warwick.ac.uk/fac/sci/physics/current/teach/module_home/px435/lec_oscillations.pdf}},
+year = {2012},
+}
+@Misc{prob,
+author = {Darrel Smith},
+title = {Calculating the Probability for Neutrino Oscillations},
+howpublished = {\url{http://physicsx.pr.erau.edu/Office/oscillations.pdf}},
+year = {2001},
+}
 \bibitem{miniboone} The MiniBooNE Collaboration, "Unexplained Excess of Electronlike Events from a 1-GeV Neutrino Beam", PRL 102, 101802 (2009) 
 \bibitem{SBN}R.Acciari et al., "A Proposla for a Three Detector Short-Baseline Neutrino Oscillation Program in the Fermilab Booster Neutrino Beam", arXiv:1503.01520, (2015).
 \bibitem{ccinclusive}MicroBooNe-Public-Note-1010 (2016) 
