--- a/neutrinos.tex
+++ b/neutrinos.tex
@@ -4,7 +4,7 @@
 \section{What are Neutrinos}
 Neutrinos are one of the fundamental particles which make up the universe. They are also one of the least understood. Neutrinos are not affected by the electromagnetic forces because they do not have electric charge. Neutrinos are affected by a "weak" sub-atomic force of much shorter range than electromagnetism, and are therefore able to pass through great distances in matter without being affected by it. Until the late 90's, neutrinos were thought to have no mass. Due to their mass, neutrinos are also affected by gravity. Neutrinos are created by radioactive decay or nuclear reactions such as the ones that happen in the sun, in nuclear reactors or when cosmic rays hit atoms. There are three types of neutrinos, $\nu_{e}$, $\nu_{\mu}$ and $\nu_{\tau}$ which correspond to their charged lepton pairs.  
 
-As previously stated, neutrinos are very weakly interacting; in fact, neutrinos can pass unscathed through a wall of lead several hundred light-years thick. Because neutrinos interact so rarely, studying neutrinos requires a massive detector and a powerful neutrino source. With that being said, we can only infer their existence when they interact in a detector. In a collision, distinct charged particles are produced with each type of neutrino. An electron neutrino will create an electron, a muon neutrino will create a muon, and a tau neutrino will create a tau. The track the particle leaves in the detector is how one figures out what type of neutrino interaction was “seen.” Liquid Argon Time Projection Chambers are the newest type of detectors being used to study neutrinos due to their excellent imaging and particle identification capabilities. 
+As previously stated, neutrinos are very weakly interacting; in fact, neutrinos can pass unscathed through a wall of lead several hundred light-years thick. Because neutrinos interact so rarely, studying neutrinos requires a massive detector and a powerful neutrino source. With that being said, we can only infer their existence when they interact in a detector. In a collision, distinct charged particles are produced with each type of neutrino. An electron neutrino will create an electron, a muon neutrino will create a muon, and a tau neutrino will create a tau. The track the particle leaves in the detector is how one figures out what type of neutrino interaction was ``seen''. Liquid Argon Time Projection Chambers are the newest type of detectors being used to study neutrinos due to their excellent imaging and particle identification capabilities. 
 
 \section{History of Neutrinos}
 The neutrino was first postulated by Wolfgang Pauli in 1931 to explain how beta decay could resolve the conservation of energy, momentum and angular momentum problem. Pauli suggested that this missing energy might be carried off, unseen, by a neutral particle (he called neutron) which was escaping detection. James Chadwick discovered a much heavier nuclear particle in 1932 that he also named neutron, leaving two particles with the same name. Enrico Fermi was the first person to coin the term neutrino (which means little neutral one in latin) in 1933 to fix this confusion. Fermi's paper, which was published in 1934, unified Pauli's neutrino with Paul Dirac's positron and Werner Heisenberg's neutron-proton model and his theory accurately explained many experimentally observed results. Wang Ganchang first proposed the use of beta capture to experimentally detect neutrinos and in 1959 Clyde Cowan and Frederick Reines published their work stating that they had detected the neutrino. The experiment called for antineutrinos created in a nuclear reactor by beta decay that reacted with protons producing neutrons and positrons: $\nu_{e} +p^{+}\rightarrow n^{0} + e^{+}$. Once this happens, the positron finds an electron and they annihilate each other and the resulting gamma rays are detectable. The neutron is detected by neutron capture and the releasing of another gamma ray. In 1962 Leon M. Lenderman, Melvin Schwartz and Jack Steinberger were the first to detect interactions of the muon neutrino. The first detection of the tau neutrino was announced in the summer of 2000 by the DONUT collaboration at Fermilab. In the late 1960s, many experiments found that the number of electron neutrinos arriving from the sun was around $1/3$ to $1/2$ the number predicted by the Standard Solar Model. This became known as the solar neutrino problem and remained unresolved for around thirty years. This problem was resolved by the discovery of neutrino oscillation and mass.\cite{neutrino}
@@ -13,7 +13,7 @@ The neutrino was first postulated by Wolfgang Pauli in 1931 to explain how beta 
 \section{Neutrino Oscillations}
 Neutrino oscillation was first predicted by Bruno Pontecorvo. It describes the phenomenon of a neutrino created with a specific lepton flavour (electron, muon or tau) that is later measured to have a different flavour. Neutrino oscillation is important theoretically and experimentally due to the fact that this observation implies that the neutrino has a non-zero mass, which is not part of the original Standard Model of particle physics. \cite{neutrinooscillation} 
 
-\section{Solar Oscillations and the Solar Neutrino Problem}
+\subsection{Solar Oscillations and the Solar Neutrino Problem}
 
 The solar neutrino flux derived from Bahcall's Standard Solar Model is shown in figure \ref{fig:solarmodel}. Nuclear fusion and decay processes produce an abundant amount of neutrinos. The standard solar model predicts that these reactions produce several groups of neutrinos, each with differing fluxes and energy spectra. The figure also shows the ranges of detection of existing solar neutrino experiments in different shades of blue to illustrate that they sample different portions of the solar neutrino energy spectrum. Three of these experiments, plus a new one, are discussed below.
 
@@ -58,12 +58,12 @@ The solution to the solar neutrino problem was finally experimentally determined
 \caption{Solar Neutrino Experiments}
 \label{fig:solarexperiments}
 \end{figure}
-\subsection{MSW Effect}
+\subsubsection{MSW Effect}
 The Mikheyev-Smirnov-WOlfenshein effect is a process which acts to modify neutrino oscillations in matter. The presence of electrons in matter changes the energy levels of the mass eigenstates of neutrinos due to charged current coherent forward scattering of the electron neutrinos. This coherent forward scattering is similar to the electromagnetic process with respect to the refractive index of light in a medium. Because of this MSW Effect, neutrinos in vacuum have a different effective mass than neutrinos in matter and because neutrino oscillations depend on the squared mass difference of the neutrinos, the neutrino oscillations are different in matter than in vacuum. This effect is important at the sun where electron neutrinos are produced. The neutrinos of high energy leaving the sun are in a vacuum propagation eigenstate $\nu_{2}$ that has a very small overlap with the electron neutrino $\nu_{e}=\nu_{1}cos(\theta)+\nu_{2}sin(\theta)$ seen by the charged current reactions in Kamiokande-II and SNO. The discrepancy of the deficit between SNO, Kamiokande-II and Homestake is due to the energy of the solar neutrinos. The MSW effect "turns on" at about 2MeV and at lower energies, this MSW effect is negligible. \cite{Smirnov:2003da}
 
 
 
-\section{Atmospheric Oscillations and the Atmospheric Neutrino Anomaly}
+\subsection{Atmospheric Oscillations and the Atmospheric Neutrino Anomaly}
 Atmospheric neutrinos are neutrinos that stem from the decay hadrons coming from primary cosmic rays. The dominant part of the decay chain is shown in equations  \ref{eq:piplus} and \ref{eq:piminus}
 
 \begin{equation}
@@ -103,11 +103,10 @@ R = \frac{(N_{\mu}/N_{e})_{DATA}}{(N_{\mu}/N_{e})_{SIM}}
 \label{fig:ratiotable}
 \end{figure}
 
-Kamiokande-II has the the capability of measuring the direction of the incoming neutrinos. The expectation of atmospheric neutrino detection is that the flux be isotropic due to the fact that atmospheric neutrinos can reach the detector from all directions. Kamiokande-II noticed that muon-like data did not agree well with this expectation. At low energies approximately half of the $\nu_{\mu}$ are missing over the full range of zenith angles. At high energies the number of $\nu_{\mu}$ coming down from above the detector seems to agree with expectation, but half of the same $\nu_{\mu}$ coming up from below the detector are missing. This anomaly can be easily explained by neutrino flavour oscillations. Due to the fact that the neutrino travels less distance coming straight down into the detector (about 15km) than coming up from the bottom of the detector(13000km) changes the probability of oscillation. The probability of oscillation for the muon neutrinos coming down into the detector is roughly zero, whereas for neutrinos coming up, the oscillation probability is $sin^2(2\theta)$. Also, that fact that the electron-like events are not reduced, but the muon-like events are, suggests that the oscillation mode for atmospheric neutrinos is $\nu_{\mu} \rightarrow \nu_{\tau}$. 
-Both the solar and atmospheric neutrino problems can be explained by neutrino oscillation so its fitting to derive this phenomenon mathematically. In the next two sections, two flavour and three flavour neutrino oscillation derivations will be explained. 
+Kamiokande-II has the the capability of measuring the direction of the incoming neutrinos. The expectation of atmospheric neutrino detection is that the flux be isotropic due to the fact that atmospheric neutrinos can reach the detector from all directions. Kamiokande-II noticed that muon-like data did not agree well with this expectation. At low energies approximately half of the $\nu_{\mu}$ are missing over the full range of zenith angles. At high energies the number of $\nu_{\mu}$ coming down from above the detector seems to agree with expectation, but half of the same $\nu_{\mu}$ coming up from below the detector are missing. This anomaly can be easily explained by neutrino flavour oscillations. Due to the fact that the neutrino travels less distance coming straight down into the detector (about 15km) than coming up from the bottom of the detector(13000km) changes the probability of oscillation. The probability of oscillation for the muon neutrinos coming down into the detector is roughly zero, whereas for neutrinos coming up, the oscillation probability is $sin^2(2\theta)$. Both the solar and atmospheric neutrino problems can be explained by neutrino oscillation so its fitting to derive this phenomenon mathematically. In the next two sections, two flavour and three flavour neutrino oscillation derivations will be explained. 
 
 
-\section{Two Flavour Neutrino Oscillation Formulation}
+\subsection{Two Flavour Neutrino Oscillation Formulation}
 The flavour eigenstates can oscillate between eachother because they are composed of an add-mixture of mass eigenstates($\nu_{1}$,$\nu_{2}$). Figure \ref{fig:mixing} shows the mass and flavour eigenstates rotated by an angle $\theta$ which is the mixing angle. 
 
 In matrix form the wavefunctions are:
@@ -217,7 +216,7 @@ P(\nu_{\mu} \rightarrow \nu_{e}) = sin^{2}2\theta sin^2\left(\frac{\Delta m^2 L}
  \item L/E: This is the variable that is of most interest to experimental physicists due to the fact that it is the variable that we set. L is the distance between the source and detector and E is the energy of the neutrino. For a given $\Delta m^2$, the probability of oscillation changes with respect to L/E. 
  \end{itemize}
 
-\section{Three Flavour Neutrino Oscillation Formulation}
+\subsection{Three Flavour Neutrino Oscillation Formulation}
 Seeing the quantum mechanics involved in deriving the probability of a two flavour neutrino oscillation, it is now possible to formulate the three flavour neutrino oscillation. The three flavour neutrino oscillation formulation begins  similarly to the two flavour, but there is the Pontecorvo-Maki-Nakagawa-Sakata matrix (PMNS) instead of the 2X2 matrix in the previous section. The PMNS matrix is show below:
 \begin{equation}
 \centering
@@ -242,9 +241,8 @@ P_{\alpha \rightarrow \beta}= \delta_{\alpha \beta} - 4 \Sigma Re(U^{*}_{\alpha 
 
 The main things to notice here are $\delta_{ij}$ which is the CP violating term and has not been measured yet, and $\theta_{13}$ which has just been measured. CP violation is a violation of the postulated CP-symmetry. CP-symmetry states that the laws of physics should be the same if a particle were to be exchanged with its antiparticle and then if the left hand side of a decay were switched with the right hand side. 
 
-%\section{Reactor Oscillation}
-%Many experiments have searched for oscillation of electron anti-neutrinos produced at nuclear reactors. Such oscillations give the value of the parameter θ13. The KamLAND experiment, started in 2002, has made a high precision observation of reactor neutrino oscillation. Neutrinos produced in nuclear reactors have energies similar to solar neutrinos, a few MeV. The baselines of these experiments have ranged from tens of meters to over 100 km.
-%On 8 March 2012, the Daya Bay team announced a 5.2σ discovery that θ13≠0. Two other experiments are currently measuring reactor neutrino oscillation (at the same baseline of a few kilometers) and may eventually confirm the Daya Bay results: Double Chooz and RENO.
+\subsection{Reactor Oscillation}
+Many experiments have searched for oscillation of electron anti-neutrinos produced at nuclear reactors. Such oscillations give the value of the parameter $\theta_{13}$. The KamLAND experiment, started in 2002, has made a high precision observation of reactor neutrino oscillation. Neutrinos produced in nuclear reactors have energies similar to solar neutrinos, a few MeV. The baselines of these experiments have ranged from tens of meters to over 100 km. On 8 March 2012, the Daya Bay team announced a 5.2$\sigma$ discovery that $\theta_{13}\neq 0$. %Two other experiments are currently measuring reactor neutrino oscillation (at the same baseline of a few kilometers) and may eventually confirm the Daya Bay results: Double Chooz and RENO.
 
 
 %\section{Beam Oscillation}
