--- a/MicroBooNE.tex
+++ b/MicroBooNE.tex
@@ -1,4 +1,4 @@
-\chapter{The MicroBooNE Experiment}
+\chapter{The MicroBooNE Experiment}\label{ch:microboone}
 The purpose of this chapter is to discuss and understand the details of the MicroBooNE detector. A thorough understanding of MicroBooNE and the technology behind liquid argon time projection chambers is important for understanding results as well as understanding how images were made for use in deep learning efforts that will be outlined in later chapters.   
 
 \section{Introduction}
