--- a/data.tex
+++ b/data.tex
@@ -1,4 +1,4 @@
-\chapter{Using Convolutional Neural Networks on MicroBooNE Data}
+\chapter{Using Convolutional Neural Networks on MicroBooNE Data}\label{ch:data}
 \dots 
 \clearpage
 \dots
