--- a/intro.tex
+++ b/intro.tex
@@ -5,4 +5,12 @@
 % decide later, do the writing first
 \chapter{Introduction}
 %\addcontentsline{toc}{chapter}{Introduction}
-This thesis will be a description of work done to further increase effiiciency and purity of the charged current inclusive cross section measurement using the MicroBooNE detector. It will also describe the MicroBooNE detector, what neutrinos are, the low energy excess and how MicroBooNE will contribute to this measurement, the charged current inclusive cross section measuremnt and it's importance as well as convolutional neural networks and how they can be used in $\mu/\pi$ separation. Chapters \dots will talk about \dots
+This thesis will be a description of work done to further increase effiiciency and purity of the charged current inclusive cross section measurement using the MicroBooNE detector. It will also describe the MicroBooNE detector, what neutrinos are, the charged current inclusive cross section measuremnt and it's importance as well as convolutional neural networks and how they can be used in $\mu/\pi$ separation. 
+Chapter \ref{ch:neutrinos} will talk about the background of neutrinos and the people and detectors that discovered neutrinos as well as an in depth history of neutrino oscillation and the discovery that neutrinos have mass. 
+Chapter \ref{ch:micriboone} will discuss the MicroBooNE experiement, specifically,  how Liquid Argon Time Projection Chambers work, the Light Collection System and the Electronic and Readout Trigger systems.
+Chapter \ref{ch:beam} will describe the Booster Neutrino Beam sationed at Fermi National Accelerator Lab. It will go into depth on the neutrino flux and \dots
+Chapter \ref{ch:neutrinoID} will discuss the work I did on detecting the first neutrinos seen in the MicroBooNE detector and the software reconstruction efforts required to create an automated neutrino ID filter that was used to find the first neutrinos and then was later expanded on to create the charged current inclusive filter that will be discussed in chapter \ref{ch:meas}
+Chapter \ref{ch:mupi} will discuss the importance of $\mu/\pi$ separation for the charged current inclusive cross section measurement.
+Chapter \ref{ch:cnn} will give a brief description of what Convolutional Neural Networks are and how it will be used for $\mu/\pi$ separation in this selection. 
+Chapter \ref{ch:hardware} will discuss hardware
+Chapters \ref{ch:cnn_results}, \ref{ch:data} and \ref{ch:selImodcompare} will discuss the results of using Convolutional Neural Networks on monte-carlo and data to sift out charged current inclusive neutrino events. 
