--- a/mupiseparation.tex
+++ b/mupiseparation.tex
@@ -1,4 +1,4 @@
-\chapter{The importance of $\mu/\pi$ separation in MicroBooNE}
+\chapter{The importance of $\mu/\pi$ separation in MicroBooNE}\label{ch:mupi}
 $\mu/\pi$ separation chapter goes here.
 
 \clearpage
