--- a/neutrinos.tex
+++ b/neutrinos.tex
@@ -1,4 +1,4 @@
-\chapter{Neutrinos}
+\chapter{Neutrinos}\label{ch:neutrinos}
 %\addcontentsline{toc}{chapter}{Neutrinos}
 
 \section{What are Neutrinos}
