--- a/selImodcompare.tex
+++ b/selImodcompare.tex
@@ -1,4 +1,4 @@
-\chapter{Comparing two CC-Inclusive Cross Section Selection Filters}
+\chapter{Comparing two CC-Inclusive Cross Section Selection Filters}\label{ch:selImodcompare}
 \dots
 \clearpage
 \dots
