--- a/syr_cluster.tex
+++ b/syr_cluster.tex
@@ -1,4 +1,4 @@
-\chapter{Hardware Frameworks}
+\chapter{Hardware Frameworks}\label{ch:hardware}
 Chapter about different frameworks used/timing on each setup.
 \section{Syracuse CPU Machine setup}
 \section{Syracuse University GPU Cluster Setup}
