--- a/neutrinos.tex
+++ b/neutrinos.tex
@@ -11,7 +11,7 @@ The neutrino was first postulated by Wolfgang Pauli in 1931 to explain how beta 
 
 
 \section{Neutrino Oscillations}
-Neutrino oscillation was first predicted by Bruno Pontecorvo. It describes the phenomenon of a neutrino created with a specific lepton flavour (electron, muon or tau) that is later measured to have a different flavour. Neutrino oscillation is important theoretically and experimentally due to the fact that this observation implies that the neutrino has a non-zero mass, which is not part of the original Standard Model of particle physics. \cite{neutrinooscillation} 
+Neutrino oscillation was first predicted by Bruno Pontecorvo. It describes the phenomenon of a neutrino created with a specific lepton flavor (electron, muon or tau) that is later measured to have a different flavor. Neutrino oscillation is important theoretically and experimentally due to the fact that this observation implies that the neutrino has a non-zero mass, which is not part of the original Standard Model of particle physics. \cite{neutrinooscillation} 
 
 \subsection{Solar Oscillations and the Solar Neutrino Problem}
 
@@ -35,7 +35,7 @@ The first experiment to detect the effects of neutrino oscillation was the Ray D
 
 While it is now known that the Homestake Experiment detected neutrinos, some physicist were weary of the results. Conclusive evidence of the Solar Neutrino Problem was provided by the Kamiokande-II experiment, a water Cherenkov detector with a low enough energy threshold to detect neutrinos through neutrino-electron elastic scattering. In the elastic scattering interaction the electrons coming out of the point of reaction strongly point in the direction that the neutrino was traveling, away from the sun. While the neutrinos observed in Kamiokande-II were clearly from the sun, there was still a discrepancy between Kamiokande-II and Homestake; The Kamiokande-II experiment measured about 1/2 the predicted flux, rather than the 1/3 that the Homestake Experiment saw.
 
-The solution to the solar neutrino problem was finally experimentally determined by the Sudbury Neutrino Observatory(SNO). The Ray Davis's Homestake Experiment was only sensitive to electron neutrinos, and the Kamiokande-II Experiment was dominated by the electron neutrino signal. The SNO experiment had the capability to see all three neutrino flavours. Because of this, it was possible to measure the electron neutrinos and total neutrino flux. The experiment demonstrated that the deficit was due to the MSW effect,  the conversion of electron neutrinos from their pure flavour state into the second neutrino mass eigenstate as they passed through a resonance due to the changing density of the sun. The resonance is energy dependent, and is visible near 2MeV. The water cherenkov detectors only detect neutrinos above about 5MeV, while the radiochemical experiments were sensitive to lower energy (0.8MeV for chlorine, 0.2MeV for gallium), and this turned out to be the source of the difference in the observed neutrino rates at the two types of experiments. Figure \ref{fig:solarexperiments} shows Homestake, Kamiokande-II and SNO experiments. 
+The solution to the solar neutrino problem was finally experimentally determined by the Sudbury Neutrino Observatory(SNO). The Ray Davis's Homestake Experiment was only sensitive to electron neutrinos, and the Kamiokande-II Experiment was dominated by the electron neutrino signal. The SNO experiment had the capability to see all three neutrino flavors. Because of this, it was possible to measure the electron neutrinos and total neutrino flux. The experiment demonstrated that the deficit was due to the MSW effect,  the conversion of electron neutrinos from their pure flavor state into the second neutrino mass eigenstate as they passed through a resonance due to the changing density of the sun. The resonance is energy dependent, and is visible near 2MeV. The water cherenkov detectors only detect neutrinos above about 5MeV, while the radiochemical experiments were sensitive to lower energy (0.8MeV for chlorine, 0.2MeV for gallium), and this turned out to be the source of the difference in the observed neutrino rates at the two types of experiments. Figure \ref{fig:solarexperiments} shows Homestake, Kamiokande-II and SNO experiments. 
 \begin{figure}[htp]
 \centering
 	\begin{subfigure}[b]{.3\textwidth}
@@ -103,11 +103,11 @@ R = \frac{(N_{\mu}/N_{e})_{DATA}}{(N_{\mu}/N_{e})_{SIM}}
 \label{fig:ratiotable}
 \end{figure}
 
-Kamiokande-II has the the capability of measuring the direction of the incoming neutrinos. The expectation of atmospheric neutrino detection is that the flux be isotropic due to the fact that atmospheric neutrinos can reach the detector from all directions. Kamiokande-II noticed that muon-like data did not agree well with this expectation. At low energies approximately half of the $\nu_{\mu}$ are missing over the full range of zenith angles. At high energies the number of $\nu_{\mu}$ coming down from above the detector seems to agree with expectation, but half of the same $\nu_{\mu}$ coming up from below the detector are missing. This anomaly can be easily explained by neutrino flavour oscillations. Due to the fact that the neutrino travels less distance coming straight down into the detector (about 15km) than coming up from the bottom of the detector(13000km) changes the probability of oscillation. The probability of oscillation for the muon neutrinos coming down into the detector is roughly zero, whereas for neutrinos coming up, the oscillation probability is $sin^2(2\theta)$. Both the solar and atmospheric neutrino problems can be explained by neutrino oscillation so its fitting to derive this phenomenon mathematically. In the next two sections, two flavour and three flavour neutrino oscillation derivations will be explained. 
+Kamiokande-II has the the capability of measuring the direction of the incoming neutrinos. The expectation of atmospheric neutrino detection is that the flux be isotropic due to the fact that atmospheric neutrinos can reach the detector from all directions. Kamiokande-II noticed that muon-like data did not agree well with this expectation. At low energies approximately half of the $\nu_{\mu}$ are missing over the full range of zenith angles. At high energies the number of $\nu_{\mu}$ coming down from above the detector seems to agree with expectation, but half of the same $\nu_{\mu}$ coming up from below the detector are missing. This anomaly can be easily explained by neutrino flavor oscillations. Due to the fact that the neutrino travels less distance coming straight down into the detector (about 15km) than coming up from the bottom of the detector(13000km) changes the probability of oscillation. The probability of oscillation for the muon neutrinos coming down into the detector is roughly zero, whereas for neutrinos coming up, the oscillation probability is $sin^2(2\theta)$. Both the solar and atmospheric neutrino problems can be explained by neutrino oscillation so its fitting to derive this phenomenon mathematically. In the next two sections, two flavor and three flavor neutrino oscillation derivations will be explained. 
 
 
-\subsection{Two Flavour Neutrino Oscillation Formulation}
-The flavour eigenstates can oscillate between eachother because they are composed of an add-mixture of mass eigenstates($\nu_{1}$,$\nu_{2}$). Figure \ref{fig:mixing} shows the mass and flavour eigenstates rotated by an angle $\theta$ which is the mixing angle. 
+\subsection{Two Flavor Neutrino Oscillation Formulation}
+The flavor eigenstates can oscillate between eachother because they are composed of an add-mixture of mass eigenstates($\nu_{1}$,$\nu_{2}$). Figure \ref{fig:mixing} shows the mass and flavor eigenstates rotated by an angle $\theta$ which is the mixing angle. 
 
 In matrix form the wavefunctions are:
 
@@ -130,7 +130,7 @@ cos\theta & sin\theta \\
 \begin{figure}[htp]
 \centering
 \includegraphics[scale=.8]{figs/mixingangle.jpg}
-\caption{The flavour eigenstates are rotated by an angle $\theta$ with respect to the mass eigenstates}
+\caption{The flavor eigenstates are rotated by an angle $\theta$ with respect to the mass eigenstates}
 \label{fig:mixing}
 \end{figure}
 
@@ -211,13 +211,13 @@ P(\nu_{\mu} \rightarrow \nu_{e}) = sin^{2}2\theta sin^2\left(\frac{\Delta m^2 L}
  
  This equations has three important variables. 
  \begin{itemize}
- \item The angle $\theta$: This angle, as mentioned before, is called the mixing angle. It defines the difference between the flavour and the mass eigenstates. When $\theta = 0$ the mass and flavour eigenstates are identical and now oscillations occur. 
+ \item The angle $\theta$: This angle, as mentioned before, is called the mixing angle. It defines the difference between the flavor and the mass eigenstates. When $\theta = 0$ the mass and flavor eigenstates are identical and now oscillations occur. 
  \item The mass squared difference, $\Delta m^2$: Again $\Delta m^2 = m^2_{1}-m^2_{2}$. The reason this is an important variable is because it implies that for neutrinos to oscillate, neutrinos must have mass. Furthermore, the mass squared difference also tells us that the neutrino mass eigenstates must be different. 
  \item L/E: This is the variable that is of most interest to experimental physicists due to the fact that it is the variable that we set. L is the distance between the source and detector and E is the energy of the neutrino. For a given $\Delta m^2$, the probability of oscillation changes with respect to L/E. 
  \end{itemize}
 
-\subsection{Three Flavour Neutrino Oscillation Formulation}
-Seeing the quantum mechanics involved in deriving the probability of a two flavour neutrino oscillation, it is now possible to formulate the three flavour neutrino oscillation. The three flavour neutrino oscillation formulation begins  similarly to the two flavour, but there is the Pontecorvo-Maki-Nakagawa-Sakata matrix (PMNS) instead of the 2X2 matrix in the previous section. The PMNS matrix is show below:
+\subsection{Three Flavor Neutrino Oscillation Formulation}
+Seeing the quantum mechanics involved in deriving the probability of a two flavor neutrino oscillation, it is now possible to formulate the three flavor neutrino oscillation. The three flavor neutrino oscillation formulation begins  similarly to the two flavor, but there is the Pontecorvo-Maki-Nakagawa-Sakata matrix (PMNS) instead of the 2X2 matrix in the previous section. The PMNS matrix is show below:
 \begin{equation}
 \centering
 \begin{pmatrix}
@@ -265,7 +265,7 @@ Many experiments have searched for oscillation of electron anti-neutrinos produc
 
 
 %\section{Final Thoughts}
-%Although there is much about neutrinos that we don't know, we have made much progress in trying to understand these elusive particles. We now know that neutrinos aren't massless and because of this knowledge we now know that neutrinos oscillate between flavour and mass eigenstates. We have also just recently discovered that $\theta_{13}$ is non-zero and this knowledge will lead to experiments and data analysis to find $\delta_{cp}$.
+%Although there is much about neutrinos that we don't know, we have made much progress in trying to understand these elusive particles. We now know that neutrinos aren't massless and because of this knowledge we now know that neutrinos oscillate between flavor and mass eigenstates. We have also just recently discovered that $\theta_{13}$ is non-zero and this knowledge will lead to experiments and data analysis to find $\delta_{cp}$.
 %\clearpage
 
 %More introduction
